# chainlit

chatbot/chatbot_lite/: app.py  pyproject.toml
chatbot/chatbot_lite/.chainlit/: config.toml
chatbot/chatbot_standard/: app2.py  pyproject.toml
src/chainlit/: server.py
src/chainlit/frontend/src/: theme.ts
src/chainlit/frontend/src/api/: index.ts
src/chainlit/frontend/src/pages/: Login.tsx
src/chainlit/frontend/src/state/: settings.ts
